--- a/assets/css/top.css
+++ b/assets/css/top.css
@@ -108,6 +108,26 @@ section {
   display: flex;
 }
 
+.policy h3 {
+  font-family: "Aeonik TRIAL";
+  font-weight: 400;
+  font-size: 30px;
+  padding-bottom: 30px;
+}
+
+.policy p {
+  padding-bottom: 15px;
+}
+
+.policy ul {
+  list-style-type: disc;
+  margin-left: 40px;
+}
+
+.policy ul li {
+  padding-bottom: 15px;
+}
+
 @media screen and (min-width: 1400px) {
   .ot-container {
     max-width: 1200px;
