--- a/assets/css/top.css
+++ b/assets/css/top.css
@@ -139,3 +139,9 @@ section {
     max-width: 1600px;
   }
 }
+
+/* @media screen and (max-width: 768px) {
+  p {
+    font-size: 16px !important;
+  }
+} */
